--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="jumbotron">
       <div class="container">
         <h1>AWS CodeDeploy с использованием GitHub</h1>
-        <p>Код редактируется и теперь легко запускается через github commit!</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <p>Код теперь легко запускается через github commit!</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">EPAM 2019 &raquo;</a></p>
       </div>
     </div>
 
