--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>AWS CodeDeploy с использованием GitHub</h1>
-        <p>Код теперь легко запускается через github commit!</p>
+        <p>Код теперь легко запускается с репозитория на GitHub</p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">EPAM 2019 &raquo;</a></p>
       </div>
     </div>
@@ -23,19 +23,19 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-          <h2>Heading</h2>
+          <h2>Йоу</h2>
           <p>Это очень тестовая страница :)  </p>
-          <p><a class="btn btn-default" href="#" role="button">Кнопки не робят( &raquo;</a></p>
+          <p><a class="btn btn-default" href="#" role="button">Кнопки не робят &raquo;</a></p>
         </div>
         <div class="col-md-4">
-          <h2>Heading</h2>
+          <h2>Йоуу</h2>
           <p>Это очень тестовая страница :)  </p>
-          <p><a class="btn btn-default" href="#" role="button">Кнопки не робят( &raquo;</a></p>
+          <p><a class="btn btn-default" href="#" role="button">Кнопки не робят &raquo;</a></p>
        </div>
         <div class="col-md-4">
-          <h2>Heading</h2>
+          <h2>Йоуу</h2>
           <p>Это очень тестовая страница :) </p>
-          <p><a class="btn btn-default" href="#" role="button">Кнопки не робят( &raquo;</a></p>
+          <p><a class="btn btn-default" href="#" role="button">Кнопки не робят &raquo;</a></p>
         </div>
       </div>
 
