--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="container">
         <h1>AWS CodeDeploy с использованием GitHub</h1>
         <p>Код теперь легко запускается с репозитория на GitHub</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">EPAM 2019 &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" href="https://www.epam-group.ru/" role="button">EPAM 2019 &raquo;</a></p>
       </div>
     </div>
 
