--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Jenkins CI/CD from GitHub WebHook and CodeDeploy</h1>
-        <p>Код теперь легко запускается с репозитория на GitHub</p>
+        <p>Is it works?</p>
         <p><a class="btn btn-primary btn-lg" href="https://www.epam-group.ru/" role="button">EPAM 2019 &raquo;</a></p>
       </div>
     </div>
