--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Jenkins delpoy from github</title>
+    <title>CI/CD Project</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     
   </head>
@@ -13,8 +13,8 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Jenkins CI/CD from GitHub WebHook and CodeDeploy</h1>
-        <p>Is it aliwe?????????????????????????</p>
+        <h1>Automatically deploy code using AWS CodeDelpoy, EC2(2 instances), S3 Bucket services and Jenkins</h1>
+        <p>And now, I gonna tell you how it all works together</p>
         <p><a class="btn btn-primary btn-lg" href="https://www.epam-group.ru/" role="button">EPAM 2019 &raquo;</a></p>
       </div>
     </div>
@@ -23,18 +23,18 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-          <h2>Йоу</h2>
-          <p>Это очень тестовая страница :)  </p>
+          <h2>Yoo</h2>
+          <p>Test page</p>
           <p><a class="btn btn-default" href="#" role="button">Кнопки не робят &raquo;</a></p>
         </div>
         <div class="col-md-4">
-          <h2>Йоуу</h2>
-          <p>Это очень тестовая страница :)  </p>
+          <h2>Yoooo</h2>
+          <p>Test page</p>
           <p><a class="btn btn-default" href="#" role="button">Кнопки не робят &raquo;</a></p>
        </div>
         <div class="col-md-4">
-          <h2>Йоуу</h2>
-          <p>Это очень тестовая страница :) </p>
+          <h2>Yooooooo</h2>
+          <p>Test page</p>
           <p><a class="btn btn-default" href="#" role="button">Кнопки не робят &raquo;</a></p>
         </div>
       </div>
