--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h2>This code was automatically deploy using AWS CodeDelpoy, EC2(2 instances), S3 Bucket services and Jenkins</h2>
+        <h2>This code was automatically deploy using AWS CodeDelpoy, EC2(2 instances) and S3 Bucket services with Jenkins</h2>
         <p>And now, I gonna tell you how it all works together</p>
         <p><a class="btn btn-primary btn-lg" href="https://www.epam-group.ru/" role="button">EPAM 2019 &raquo;</a></p>
       </div>
